changed collors and menu text

--- a/Content/site.less
+++ b/Content/site.less
@@ -35,6 +35,8 @@
                 .accent {
                     font-size: 30px;
                     margin-bottom: -23px;
+                    
+                    color: darkgray;
                 }
             }
         }
