--- a/Content/site.css
+++ b/Content/site.css
@@ -35,6 +35,7 @@ a:link {
 .mainMenu ul li a .accent {
   font-size: 30px;
   margin-bottom: -23px;
+  color: darkgray;
 }
 .mainMenu ul li:hover {
   color: black;
