added knockout and started with some viewmodels to see where we are going

--- a/Content/site.less
+++ b/Content/site.less
@@ -10,7 +10,7 @@
 
     .col-md-2 {
         position: relative;
-        height:100%;        
+        height: 100%;
     }
 
     .bottom-align {
@@ -19,24 +19,25 @@
     }
 
     ul {
-        margin-bottom:250px;
+        margin-bottom: 250px;
+
         li {
             margin-bottom: 15px;
             padding-right: 7px;
             font-size: 40px;
             text-align: right;
             color: gray;
-
-
-            a {
-                color: gray;
+            position:relative;
+            a {                
                 margin-bottom: -30px;
-
+                color: inherit;
                 .accent {
-                    font-size: 30px;
-                    margin-bottom: -23px;
-                    
+                    font-size: 25px;
+                    margin-bottom: -20px;
                     color: darkgray;
+                    top:-15px;
+                    right:10px;
+                    position:absolute;
                 }
             }
         }
@@ -56,9 +57,9 @@
     .me {
         height: 66px;
         font-size: 60px !important;
-        border-right: solid;
-        border-right-width: 2px;
-        color: black;
+        border-right: solid !important;
+        border-right-width: 2px !important;
+        color: black !important;
     }
 
 
