--- a/Content/site.css
+++ b/Content/site.css
@@ -27,15 +27,19 @@ a:link {
   font-size: 40px;
   text-align: right;
   color: gray;
+  position: relative;
 }
 .mainMenu ul li a {
-  color: gray;
   margin-bottom: -30px;
+  color: inherit;
 }
 .mainMenu ul li a .accent {
-  font-size: 30px;
-  margin-bottom: -23px;
+  font-size: 25px;
+  margin-bottom: -20px;
   color: darkgray;
+  top: -15px;
+  right: 10px;
+  position: absolute;
 }
 .mainMenu ul li:hover {
   color: black;
@@ -49,9 +53,9 @@ a:link {
 .mainMenu .me {
   height: 66px;
   font-size: 60px !important;
-  border-right: solid;
-  border-right-width: 2px;
-  color: black;
+  border-right: solid !important;
+  border-right-width: 2px !important;
+  color: black !important;
 }
 .mainMenu h1 {
   font-size: 60px;
